--- a/ro/calendar/chrome/calendar/calendar-alarms.properties
+++ b/ro/calendar/chrome/calendar/calendar-alarms.properties
@@ -44,8 +44,8 @@ reminderTitleAtEndEvent=Momentul în care se termină evenimentul
 reminderTitleAtEndTask=Momentul în care se termină sarcina
 
 reminderCustomUnitMinutes=#1 minut;#1 minute
-reminderCustomUnitHours=#1 hour;#1 hours 
-reminderCustomUnitDays=#1 day;#1 days
+reminderCustomUnitHours=#1 oră;#1 ore 
+reminderCustomUnitDays=#1 zi;#1 zile
 
 reminderCustomOriginBeginBeforeEvent=înainte de a începe evenimentul
 reminderCustomOriginBeginAfterEvent=după ce începe evenimentul
