--- a/ro/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/ro/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,90 +37,61 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=în fiecare zi
-repeatDetailsRuleDaily2=în fiecare altă zi
 # LOCALIZATION NOTE (repeatDetailsRuleDaily3):
 # Edit recurrence window -> Recurrence pattern -> Daily repeat rules
-# %1$S - number
+# #1 - number
 # e.g. "every 4 days"
-repeatDetailsRuleDaily3=la fiecare %1$S zile
+dailyEveryNth=zilnic;la fiecare #1 zile
 repeatDetailsRuleDaily4=în fiecare zi a săptămânii
 
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly1):
+# LOCALIZATION NOTE (weeklyNthOn)
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
 # %1$S - weekday (one or more)
-# e.g. "every Sunday and Monday"
-repeatDetailsRuleWeekly1=în fiecare %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly2):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - weekday (one or more)
-# e.g. "every other week on Sunday, Monday and Friday"
-repeatDetailsRuleWeekly2=în fiecare altă săptămână pe %1$S
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly3):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# %2$S - weekday (one or more)
-# e.g. "every 3 weeks on Friday"
-repeatDetailsRuleWeekly3=la fiecare %1$S săptămâni în ziua de %2$S
-repeatDetailsRuleWeekly4=în fiecare săptămână
-repeatDetailsRuleWeekly5=în fiecare altă săptămână
-# LOCALIZATION NOTE (repeatDetailsRuleWeekly6):
-# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
-# %1$S - number
-# e.g. "every 2 weeks"
-repeatDetailsRuleWeekly6=la fiecare %1$S săptămâni
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=în fiecare %1$S;%1$S, la fiecare #2 săptămâni
 
-repeatDetailsDay1=Duminică
-repeatDetailsDay2=Luni
-repeatDetailsDay3=Marți
-repeatDetailsDay4=Miercuri
-repeatDetailsDay5=Joi
-repeatDetailsDay6=Vineri
-repeatDetailsDay7=Sâmbătă
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=săptămânal;la fiecare #1 săptămâni
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=și
 
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly):
+# LOCALIZATION NOTE (monthlyNthOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - ordinal
 # %2$S - weekday
-# e.g. "the first monday of every month"
-repeatDetailsRuleMonthly=%1$S %2$S din fiecare lună
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly2):
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=în fiecare lună, %2$S în %1$S;%2$S, în %1$S, la fiecare #3 luni
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# e.g. "the first monday of every other month"
-repeatDetailsRuleMonthly2=%1$S %2$S din fiecare altă lună
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly3):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - number
-# e.g. "the first monday of every 3 month"
-repeatDetailsRuleMonthly3=%1$S %2$S din fiecare %3$S lună
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly4):
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=în fiecare %1$S a lunii;în fiecare %1$S din #2 în #2 luni
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every month"
-repeatDetailsRuleMonthly4=ziua %1$S din fiecare lună
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly5):
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=ziua %1$S a fiecărei luni;ziua %1$S din #2 în #2 luni
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
 # Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
 # %1$S - day of month
-# e.g. "day 3 of every other month"
-repeatDetailsRuleMonthly5=ziua %1$S din fiecare altă lună
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly6):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - day of month
-# %2$S - number
-# e.g. "day 3 of every 4 month"
-repeatDetailsRuleMonthly6=ziua %1$S din fiecare %2$S lună
-repeatDetailsRuleMonthly7=ultima zi a lunii
-repeatDetailsRuleMonthly8=ultima zi a fiecărei luni
-# LOCALIZATION NOTE (repeatDetailsRuleMonthly9):
-# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
-# %1$S - number
-# e.g. "the last day of every 4 month"
-repeatDetailsRuleMonthly9=ultima zi din fiecare %1$S
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=ultima zi a lunii; ultima zi a lunii, din #1 în #1 luni
 
 repeatDetailsOrdinal1=prima
 repeatDetailsOrdinal2=a doua
@@ -129,82 +100,61 @@ repeatDetailsOrdinal4=a patra
 repeatDetailsOrdinal5=a cincea
 repeatDetailsOrdinal-1=ultima
 
-# LOCALIZATION NOTE (repeatDetailsRuleYearly1):
+# LOCALIZATION NOTE (yearlyNthOn):
 # Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
 # %1$S - month
 # %2$S - day of month
-# e.g. "every December 14"
-repeatDetailsRuleYearly1=în fiecare %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly2):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# e.g. "every other year on December 14"
-repeatDetailsRuleYearly2=în fiecare alt an pe %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly3):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - month
-# %2$S - day of month
-# %3$S - number
+# #3 - yearly interval
 # e.g. "every 3 years on December 14"
-repeatDetailsRuleYearly3=la fiecare %3$S ani pe %1$S %2$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly4):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "the second Monday of March"
-repeatDetailsRuleYearly4=%1$S %2$S din %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly5):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# e.g "every other year the second Monday of March"
-repeatDetailsRuleYearly5=în fiecare alt an %1$S %2$S of %3$S
-# LOCALIZATION NOTE (repeatDetailsRuleYearly6):
-# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
-# %1$S - ordinal
-# %2$S - weekday
-# %3$S - month
-# %4$S - number
-# e.g "every 3 years the second Monday of March"
-repeatDetailsRuleYearly6=în fiecare %4$S ani %1$S %2$S din %3$S
+yearlyNthOn=în fiecare %2$S %1$S;din #3 în #3 ani în %2$S %1$S
 
-repeatDetailsMonth1=Ianuarie
-repeatDetailsMonth2=Februarie
-repeatDetailsMonth3=Martie
-repeatDetailsMonth4=Aprilie
-repeatDetailsMonth5=Mai
-repeatDetailsMonth6=Iunie
-repeatDetailsMonth7=Iulie
-repeatDetailsMonth8=August
-repeatDetailsMonth9=Septembrie
-repeatDetailsMonth10=Octombrie
-repeatDetailsMonth11=Noiembrie
-repeatDetailsMonth12=Decembrie
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=%2$S, %1$S în fiecare %3$S;din #4 în #4 ani, %2$S %1$S %3$S
 
-# LOCALIZATION NOTE (repeatDetailsCount):
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyEveryNthOfNth=în fiecare %1$S din %2$S;din 3 în 3 ani în fiecare %1$S din %2$S
+
+# LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
-# %4$S - event start time (e.g. hh:mm (PM/AM))
-# %5$S - event end time (e.g. hh:mm (PM/AM))
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
 # "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times
 #  from 5:00 PM to 6:00 PM"
-repeatDetailsCount=Are loc în %1$S\nîncepând din %2$S de %3$S ori\nde la %4$S până la %5$S.
-# LOCALIZATION NOTE (repeatDetailsCountAllDay):
+repeatCount=Are loc %1$S\nîncepând cu %2$S o singură dată\nde la ora %3$S la %4$S.;Are loc %1$S\nîncepând cu %2$S de #5 ori\nde la ora %3$S la %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
 # %2%$ - event start date (e.g. mm/gg/yyyy)
-# %3$S - event occurence times: number
+# #3 - event occurence times: number
 # e.g. with repeatDetailsRuleMonthly3:
 # "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
 #  effective 1/1/2009 for 5 times"
-repeatDetailsCountAllDay=Are loc în %1$S\nîncepând din %2$S de %3$S ori.
+repeatCountAllDay=Are loc 1$S\nîncepând cu %2$S o singură dată.;Are loc %1$S\nîncepând cu %2$S de #3 ori.
+
 # LOCALIZATION NOTE (repeatDetailsUntil):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
 # %1%$ - repeatDetailsRule...(see above). This is the first line of the link
@@ -245,6 +195,11 @@ repeatDetailsInfinite=Are loc în %1$S\nîncepând din %2$S\nde la %3$S la %4$S.
 # "Occurs day 3 of every 5 month
 #  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=Are loc în %1$S\nîncepând din %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Clic aici pentru detalii
 
 # LOCALIZATION NOTE (reminderCustomTitle):
 # Edit reminder window -> Reminder details link on Event/Task dialog window
