--- a/ca/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/ca/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -36,71 +36,180 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=cada dia
-repeatDetailsRuleDaily2=cada dia a partir de demà
-repeatDetailsRuleDaily3=cada %1$S dies
-repeatDetailsRuleDaily4=tots els dies entre setmana 
+# LOCALIZATION NOTE (repeatDetailsRuleDaily3):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=cada dia;cada #1 dies
+repeatDetailsRuleDaily4=tots els dies entre setmana
 
-repeatDetailsRuleWeekly1=cada %1$S
-repeatDetailsRuleWeekly2=cada %1$S a partir de la setmana vinent
-repeatDetailsRuleWeekly3=cada %1$S setmanes %2$S
-repeatDetailsRuleWeekly4=cada setmana
-repeatDetailsRuleWeekly5=cada setmana a partir de la setmana vinent
-repeatDetailsRuleWeekly6=cada %1$S setmanes
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=tots els %1$S;el %1$S cada #2 setmanes
 
-repeatDetailsDay1=Diumenge
-repeatDetailsDay2=Dilluns
-repeatDetailsDay3=Dimarts
-repeatDetailsDay4=Dimecres
-repeatDetailsDay5=Dijous
-repeatDetailsDay6=Divendres
-repeatDetailsDay7=Dissabte
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=cada setmana;cada #1 setmanes
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
+# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=i
 
-repeatDetailsRuleMonthly=el %1$S %2$S de cada mes
-repeatDetailsRuleMonthly2=el %1$S %2$S, a partir del mes que ve
-repeatDetailsRuleMonthly3=el %1$S %2$S, cada %3$S mesos
-repeatDetailsRuleMonthly4=el dia %1$S de cada mes
-repeatDetailsRuleMonthly5=el dia %1$S a partir del mes que ve
-repeatDetailsRuleMonthly6=el dia %1$S, cada %2$S mesos
-repeatDetailsRuleMonthly7=l'últim dia de mes
-repeatDetailsRuleMonthly8=l'últim dia de mes a partir del mes que ve
-repeatDetailsRuleMonthly9=l'últim dia de mes cada mes %1$S
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=%1$S %2$S de cada mes;%1$S %2$S cada #3 mesos
 
-repeatDetailsOrdinal1=primer
-repeatDetailsOrdinal2=segon
-repeatDetailsOrdinal3=tercer
-repeatDetailsOrdinal4=quart
-repeatDetailsOrdinal5=cinquè
-repeatDetailsOrdinal-1=darrer
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=tots els %1$S de cada mes; cada #2 mesos, tots els %1$S
 
-repeatDetailsRuleYearly1=cada %1$S %2$S
-repeatDetailsRuleYearly2=cada %1$S %2$S, a partir de l'any que ve
-repeatDetailsRuleYearly3=cada %1$S %2$S, cada %3$S anys
-repeatDetailsRuleYearly4=el %1$S %2$S de %3$S
-repeatDetailsRuleYearly5=cada altre any el %1$S %2$S de %3$S
-repeatDetailsRuleYearly6=cada %4$S anys el %1$S %2$S de %3$S
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=el dia %1$S de cada mes;el dia %1$S cada #2 mesos
 
-repeatDetailsMonth1=Gener
-repeatDetailsMonth2=Febrer
-repeatDetailsMonth3=Març
-repeatDetailsMonth4=Abril
-repeatDetailsMonth5=Maig
-repeatDetailsMonth6=Juny
-repeatDetailsMonth7=Juliol
-repeatDetailsMonth8=Agost
-repeatDetailsMonth9=Setembre
-repeatDetailsMonth10=Octubre
-repeatDetailsMonth11=Novembre
-repeatDetailsMonth12=Desembre
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=l'últim dia de cada mes; cada #1 mesos, l'últim dia de mes
 
-repeatDetailsCount=Es repeteix el %1$S\nefectiu el %2$S per %3$S vegades\n del %4$S fins al %5$S.
-repeatDetailsCountAllDay=Es repeteix el %1$S\nefectiu el %2$S per %3$S vegades.
-repeatDetailsUntil=Es repeteix el %1$S\nefectiu el %2$S fins el %3$S\n del %4$S al %5$S.
-repeatDetailsUntilAllDay=Es repeteix el %1$S\nefectiu el %2$S fins al %3$S.
-repeatDetailsInfinite=Es repeteix el %1$S\nefectiu el %2$S\n del %3$S al %4$S.
-repeatDetailsInfiniteAllDay=Es repeteix el %1$S\nefectiu el %2$S.
+repeatDetailsOrdinal1=el primer
+repeatDetailsOrdinal2=el segon
+repeatDetailsOrdinal3=el tercer
+repeatDetailsOrdinal4=el quart
+repeatDetailsOrdinal5=el cinquè
+repeatDetailsOrdinal-1=l'últim
 
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=cada any, el %2$S %1$S;cada #3 anys, el %2$S %1$S
+
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=cada any, %1$S %2$S de %3$S; cada #4 anys, %1$S %2$S de %3$S 
+
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyEveryNthOfNth=tots els %1$S de %2$S;cada #4 anys, tot els %1$S de %2$S
+
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Succeeix %1$S\nel dia %2$S\nde %3$S a %4$S.;Es repeteix %1$S\n#5 vegades a partir del %2$S\nde %3$S a %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Succeeix %1$S\nel dia %2$S.;Es repeteix %1$S\n#3 vegades a partir del %2$S
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleWeekly2:
+# "Occurs every other week on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010 
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Es repeteix %1$S\na partir del %2$S fins al %3$S\nde %4$S a %5$S.
+
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
+repeatDetailsUntilAllDay=Es repeteix %1$S\na partir del %2$S fins al %3$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleMonthly6:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Es repeteix %1$S\na partir del %2$S\nde %3$S a %4$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
+repeatDetailsInfiniteAllDay=Es repeteix %1$S\na partir del %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Clica aquí per a més informació
+
+# LOCALIZATION NOTE (reminderCustomTitle):
+# Edit reminder window -> Reminder details link on Event/Task dialog window
+# 1%$S - number (reminder length)
+# 2%$S - reminderCustomUnit... (minute/hour/day)
+# %3$S - reminderCustomRelation... (before/after)
+# %4$S - reminderCustomOrigin... (the event starts/ends)
+# e.g. "5 hours before the event starts"
 reminderCustomTitle=%1$S %2$S %3$S %4$S
 reminderTitleAtStartEvent=Moment en el qual comença la cita
 reminderTitleAtStartTask=Moment en el qual comença la tasca
@@ -112,12 +221,12 @@ reminderCustomUnitHour=hora
 reminderCustomUnitHours=hores
 reminderCustomUnitDay=dia
 reminderCustomUnitDays=dies
-reminderCustomRelationBefore=abans
-reminderCustomRelationAfter=després
-reminderCustomOriginBeginEvent=la cita comença
-reminderCustomOriginEndEvent=la cita acaba
-reminderCustomOriginBeginTask=la tasca comença
-reminderCustomOriginEndTask=la tasca finalitza
+reminderCustomRelationBefore=abans que 
+reminderCustomRelationAfter=després que
+reminderCustomOriginBeginEvent=la cita comenci
+reminderCustomOriginEndEvent=la cita acabi
+reminderCustomOriginBeginTask=la tasca comenci
+reminderCustomOriginEndTask=la tasca finalitzi
 reminderErrorMaxCountReachedEvent=El calendari seleccionat té una limitació de %1$S recordatoris per cita.
 reminderErrorMaxCountReachedTask=El calendari seleccionat té una limitació de %1$S recordatoris per tasca.
 newEvent=Nova cita
@@ -136,11 +245,11 @@ selectAFile=Seleccioneu un o més fitxers per a adjuntar
 removeCalendarsTitle=Suprimeix les adjuncions
 removeCalendarsText=Segur que voleu suprimir %1$S adjuncions?
 
-
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
 # Edit recurrence window -> Recurrence pattern -> Repeat montly
 # %1$S - ordinal, %2$S - weekday 
+# e.g. "First Saturday"
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
@@ -151,6 +260,7 @@ yearlyOrder=%1$S %2$S %3$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
 # %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
+# e.g. "First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
 
