--- a/uk/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/uk/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -47,7 +47,6 @@
 # Description of import module
 ## @name EUDORAIMPORT_DESCRIPTION
 ## @loc None
-2001 = Пошта і адресні книги Eudora 
 
 # Success message
 ## @name EUDORAIMPORT_MAILBOX_SUCCESS
@@ -154,3 +153,6 @@
 2027=ім'я заголовка не знайдене
 # LOCALIZATION NOTE (2028): This warning is displayed when one of Eudora's pseudo-headers
 2028=не можу імпортувати псевдозаголовок %S
+
+# FIXME: localize
+2029=Eudora mail, address books, and settings
