--- a/uk/mail/chrome/messenger/oeImportMsgs.properties
+++ b/uk/mail/chrome/messenger/oeImportMsgs.properties
@@ -48,8 +48,6 @@
 # Description of import module
 ## @name OEIMPORT_DESCRIPTION
 ## @loc None
-## LOCALIZATION NOTE (2001): In this item, don't translate "Outlook Express"
-2001 = Пошта і адресні книги Outlook Express
 
 # Success message
 ## @name OEIMPORT_MAILBOX_SUCCESS
@@ -107,3 +105,7 @@
 ## @name OEIMPORT_ADDRESS_BADPARAM
 ## @loc None
 2010 = Під час імпорту адресної книги був переданий невірний параметр.
+
+# FIXME: localize
+## LOCALIZATION NOTE (2011): In this item, don't translate "Outlook Express"
+2011=Outlook Express mail, address books, and settings
