--- a/uk/mail/chrome/messenger/outlookImportMsgs.properties
+++ b/uk/mail/chrome/messenger/outlookImportMsgs.properties
@@ -48,8 +48,6 @@
 # Description of import module
 ## @name OUTLOOKIMPORT_DESCRIPTION
 ## @loc None
-## LOCALIZATION NOTE (2001): In this item, don't translate "Outlook"
-2001 = Пошта і адресні книги Outlook
 
 # Success message
 ## @name OUTLOOKIMPORT_MAILBOX_SUCCESS
@@ -107,3 +105,7 @@
 
 
 
+
+# FIXME: localize
+## LOCALIZATION NOTE (2010): In this item, don't translate "Outlook"
+2010=Outlook mail, address books, and settings
