--- a/uk/mail/installer/custom.properties
+++ b/uk/mail/installer/custom.properties
@@ -95,7 +95,6 @@ WARN_MANUALLY_CLOSE_APP_LAUNCH=${BrandFullName} вже запущено.\n\nБу
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Для продовження вилучення ${BrandFullName} потрібно закрити.\n\nБудь ласка закрийте ${BrandFullName} щоб продовжити.
 WARN_RESTART_REQUIRED_UNINSTALL=Для завершення попередього вилучення ${BrandShortName} ваш комп’ютер потрібно перезапустити. Хочете перезапусти його зараз?
 WARN_RESTART_REQUIRED_UPGRADE=Для завершення попереднього значного оновлення ${BrandShortName} ваш комп’ютер потрібно перезапустити. Хочете перезапусти його зараз?
-WARN_UNSUPPORTED_MSG=На жаль, ${BrandShortName} встановити неможливо. Ця версія ${BrandShortName} потребує ${MinUnsupportedVer} чи новішу.
 
 OPTIONS_PAGE_SUBTITLE=Оберіть варіант установки
 OPTIONS_PAGE_TITLE=Тип установки
@@ -103,3 +102,6 @@ OPTIONS_SUMMARY=Оберіть потрібний тип установки та
 
 # FIXME: localize
 REG_APP_DESC=${BrandShortName} — це потужна поштова програма. ${BrandShortName} підтримує протоколи IMAP та POP, а також форматування HTML. Вбудований захист від спаму, робота з RSS, швидкий пошук, перевірка правопису прото під час набирання, загальна тека вхідних листів, та потужні можливості фільтрування роблять роботу з ${BrandShortName} надзвичайно зручною.
+
+# FIXME: localize
+WARN_MIN_SUPPORTED_OS_MSG=Sorry, $BrandShortName can't be installed. This version of $BrandShortName requires ${MinSupportedVer} or newer.
