--- a/uk/mail/updater/updater.ini
+++ b/uk/mail/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 Title=Оновлення Thunderbird
-Info=Триває оновлення Thunderbird. Він запуститься за мить…
+InfoText=%MOZ_APP_DISPLAYNAME% встановлює оновлення. Він запуститься за мить…
