--- a/uk/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/uk/mail/chrome/messenger/addressbook/addressBook.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -171,12 +171,12 @@ ldap_2.servers.osx.description=Адресна книга Mac OS X
 propertyBirthday=День народження
 
 # FIXME: localize
-confirmDeleteListsAndContacts=Are you sure you want to delete the selected contacts and mailing lists?
-editContactTitle=Edit Contact
-editContactTitleWithDisplayName=Edit Contact for %S
-editContactTitleWithDisplayName=Edit Contact for %S
-newContactTitle=New Contact
-newContactTitleWithDisplayName=New Contact for %S
-newContactTitleWithDisplayName=New Contact for %S
+confirmDeleteListsAndContacts=Ви дійсно хочете вилучити вибрані картки та списки розсилання?
+editContactTitle=Редагування картки
+editContactTitleWithDisplayName=Редагування картки для %S 
+editContactTitleWithDisplayName=Редагування картки для %S
+newContactTitle=Нова картка
+newContactTitleWithDisplayName=Нова картка для %S
+newContactTitleWithDisplayName=Нова картка для %S 
 ## LOCALIZATION NOTE (totalContactStatus):
-totalContactStatus=Total contacts in %1$S: %2$S
+totalContactStatus=Всього карток у %1$S: %2$S
