--- a/uk/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/uk/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -155,4 +155,4 @@
 2028=не можу імпортувати псевдозаголовок %S
 
 # FIXME: localize
-2029=Eudora mail, address books, and settings
+2029=Листи, адресні книжки та налаштування Eudora
