--- a/uk/mail/chrome/messenger/messenger.properties
+++ b/uk/mail/chrome/messenger/messenger.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -439,7 +439,7 @@ folderPaneHeader_unread=Нечитані теки
 headerFieldYou=Ви
 
 # FIXME: localize
-archivesFolderName=Archives
-autoCompactAlwaysAskCheckbox=Always ask me before compacting folders automatically
-compactNowButton=Compact &Now
-whatsNew=What's New
+archivesFolderName=Архіви
+autoCompactAlwaysAskCheckbox=Завжди питати мене перед автоматичним стисненням тек
+compactNowButton=Стиснути &зараз
+whatsNew=Що нового
