--- a/uk/mail/chrome/messenger/msgmdn.properties
+++ b/uk/mail/chrome/messenger/msgmdn.properties
@@ -1,4 +1,4 @@
-#***** BEGIN LICENSE BLOCK *****
+﻿#***** BEGIN LICENSE BLOCK *****
 #Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 #The contents of this file are subject to the Mozilla Public License Version 
@@ -54,5 +54,5 @@ MdnDeniedReceipt=Return Receipt (denied)
 MdnFailedReceipt=Return Receipt (failed)
 
 # FIXME: localize
-MsgMdnIgnoreRequest=Ignore Request
-MsgMdnSendReceipt=Send Receipt
+MsgMdnIgnoreRequest=Ігнорувати запит
+MsgMdnSendReceipt=Надіслати звіт
