--- a/uk/mail/chrome/messenger/news.properties
+++ b/uk/mail/chrome/messenger/news.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -91,5 +91,5 @@ autoSubscribeText = Бажаєте підписатися на %1$S?
 downloadingFilterHeaders=Отримую заголовки для фільтрів: %S (%S/%S)
 
 # FIXME: localize
-enterUsernameTitle=News Server Username Required
-saveUsername=Use Password Manager to remember this value.
+enterUsernameTitle=Необхідне ім’я користувача сервера новин
+saveUsername=Використати менеджер паролів, щоби зберегти це значення.
