--- a/uk/mail/chrome/messenger/outlookImportMsgs.properties
+++ b/uk/mail/chrome/messenger/outlookImportMsgs.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -108,4 +108,4 @@
 
 # FIXME: localize
 ## LOCALIZATION NOTE (2010): In this item, don't translate "Outlook"
-2010=Outlook mail, address books, and settings
+2010=Пошта, адресні книжки та налаштування Outlook
