--- a/uk/mail/installer/custom.properties
+++ b/uk/mail/installer/custom.properties
@@ -1,4 +1,4 @@
-# ***** BEGIN LICENSE BLOCK *****
+﻿# ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
 # The contents of this file are subject to the Mozilla Public License Version
@@ -100,8 +100,8 @@ OPTIONS_PAGE_SUBTITLE=Оберіть варіант установки
 OPTIONS_PAGE_TITLE=Тип установки
 OPTIONS_SUMMARY=Оберіть потрібний тип установки та клацніть «Далі».
 
-# FIXME: localize
+
 REG_APP_DESC=${BrandShortName} — це потужна поштова програма. ${BrandShortName} підтримує протоколи IMAP та POP, а також форматування HTML. Вбудований захист від спаму, робота з RSS, швидкий пошук, перевірка правопису прото під час набирання, загальна тека вхідних листів, та потужні можливості фільтрування роблять роботу з ${BrandShortName} надзвичайно зручною.
 
 # FIXME: localize
-WARN_MIN_SUPPORTED_OS_MSG=Sorry, $BrandShortName can't be installed. This version of $BrandShortName requires ${MinSupportedVer} or newer.
+WARN_MIN_SUPPORTED_OS_MSG=Вибачте, встановити $BrandShortName неможливо. $BrandShortName вимагає${MinSupportedVer} чи новішу версію.
