--- a/pl/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/pl/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -57,10 +57,17 @@ weeklyNthOn=w %1$S;co #2 tygodnie w %1$S;co #2 tygodni w %1$S
 # e.g. "every 5 weeks"
 weeklyEveryNth=co tydzień;co #1 tygodnie;co #1 tygodni
 
+repeatDetailsDay1=niedziela
+repeatDetailsDay2=poniedziałek
+repeatDetailsDay3=wtorek
+repeatDetailsDay4=środa
+repeatDetailsDay5=czwartek
+repeatDetailsDay6=piątek
+repeatDetailsDay7=sobota
+
 # LOCALIZATION NOTE (repeatDetailsAnd):
 # Used to show a number of weekdays in a list
 # i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
-# XXX Please file a bug if this makes it hard to localize the list.
 repeatDetailsAnd=i
 
 # LOCALIZATION NOTE (monthlyNthOfEvery):
@@ -124,7 +131,20 @@ yearlyNthOnNthOf=w %1$S %2$S %3$S;w %1$S %2$S %3$S raz na #4 lata;w %1$S %2$S %3
 # #3 - number
 # e.g. "every Thursday of March"
 # e.g  "every 3 years on every Thursday of March"
-yearlyEveryNthOfNth=w każdy(-ą) %1$S %2$S;w każdy(-ą) %1$S %2$S co #3 lata;w każdy(-ą) %1$S %2$S co #3 lat
+yearlyOnEveryNthOfNth=w każdy(-ą) %1$S %2$S;w każdy(-ą) %1$S %2$S co #3 lata;w każdy(-ą) %1$S %2$S co #3 lat
+
+repeatDetailsMonth1=stycznia
+repeatDetailsMonth2=lutego
+repeatDetailsMonth3=marca
+repeatDetailsMonth4=kwietnia
+repeatDetailsMonth5=maja
+repeatDetailsMonth6=czerwca
+repeatDetailsMonth7=lipca
+repeatDetailsMonth8=sierpnia
+repeatDetailsMonth9=września
+repeatDetailsMonth10=października
+repeatDetailsMonth11=listopada
+repeatDetailsMonth12=grudnia
 
 # LOCALIZATION NOTE (repeatCount):
 # Edit recurrence window -> Recurrence details link on Event/Task dialog window
