--- a/sv-SE/mail/chrome/messenger/importMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/importMsgs.properties
@@ -276,9 +276,14 @@
 2134=Annan uppgift 1
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Anteckningar
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Skärmnnamn
 
 #Error strings
 ImportAlreadyInProgress=Det pågår redan en import. Vänta tills den är klar och försök igen.
